--- a/todo.txt
+++ b/todo.txt
@@ -11,7 +11,7 @@
 // Movie details page to Modal
 // Sign Up / Log in validation and errors
 // Default number of rows in dashboard
-Make my movies editable
+// Make my movies editable
 // Add movie button move
 // Add movie fix dropdown stuff
 // Error display on frontend for add movie
